[package]
name = "nyafetch"
version = "1.0.0"
edition = "2021"
authors = ["xqtc <xqtc@tutanota.com>"]
description = "Minimalistic system fetch utility with a cute cat. Written in Rust."
homepage = "https://github.com/xqtc161/nyafetch"
repository = "https://github.com/xqtc161/nyafetch"
license = "BSD-3-Clause"
keywords = ["fetch"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
ansi_term = "0.12.1"
